tests/negative/gold/implicit_import_test.gold
tests/negative/implicit_import_test.toit:6:7: error: Unresolved identifier: 'List'
  pre.List
      ^~~~
Compilation failed.
